@@ -55,3 +55,8 @@ STR_DOM_MISSIONSTRING_2105
 STR_DOM_MISSIONSTRING_2106
 STR_DOM_MISSIONSTRING_2107
 STR_DOM_MISSIONSTRING_2108
+STR_DOM_MISSIONSTRING_2109
+STR_DOM_MISSIONSTRING_2110
+STR_DOM_MISSIONSTRING_2111
+STR_DOM_MISSIONSTRING_2112
+STR_DOM_MISSIONSTRING_2113
